@@ -173,10 +173,11 @@ Prepend '+' to replicate this color to the tick-, grid-, and frame-pens.
 [0/0/0] (black).
 .TP
 .B BASEMAP_TYPE
-Choose between plain and fancy (thick boundary, alternating black/white frame; append + for rounded corners)  [fancy].
+Choose between inside, plain and fancy (thick boundary, alternating black/white frame; append + for rounded corners)  [fancy].
 For some map projections (e.g., Oblique Mercator), plain is the only option even if fancy is set as default.
 In general, fancy only applies to situations where the projected x and y directions parallel the lon and lat
-directions (e.g., rectangular projections, polar projections).
+directions (e.g., rectangular projections, polar projections).  For situations where all boundary ticks and annotations
+must be inside the maps (e.g., for preparing geotiffs), chose inside.
 .TP
 .B CHAR_ENCODING
 Names the eight bit character set being used for text in files and in command line parameters. This allows \fBGMT\fP
